--- a/css/styles.css
+++ b/css/styles.css
@@ -161,52 +161,66 @@ header span {
 .frame span {
   padding-left: 1.5rem;
   line-height: 2;
-}
-/* contact section */
-.contact-me {
-  box-sizing: border-box;
-  border: 1px solid;
-  position: absolute;
-  bottom: -3rem;
-  /* padding: 0 15rem; */
-  margin: 0 15%;
-  width: 70%;
-  display: flex;
-  background: #bfbf66;
-  border: 1px solid rgba(102, 191, 191, 0.1);
-  box-shadow: 4px -4px 4px rgba(102, 191, 191, 0.5);
-  border-radius: 10px;
-}
-.btn:link,
-.btn:visited {
-  padding: 0.3rem 1.25rem;
-  border-radius: 0.3rem;
-  text-decoration: none;
-  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
-  color: #fff;
-  font-family: "Poppins", sans-serif;
-}
-.btn:hover,
-.btn:active {
-  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
-}
-/* bottom container */
+} /* bottom container */
 .bottom-container {
   /* margin: 5rem 0 0; */
   padding: 8rem 0 2.2rem;
   background-color: #65bfbf;
 }
 
+.copy {
+  margin-top: 2.5rem;
+  color: #eaf6f6;
+  font-size: 0.7rem;
+}
+/* contact section */
+.contact-me {
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  box-sizing: border-box;
+  display: inline-block;
+  background: #fff;
+  border: 1px solid rgba(102, 191, 191, 0.1);
+  box-shadow: 4px -4px 4px rgba(102, 191, 191, 0.5);
+  border-radius: 10px;
+}
+.contact-me h2 {
+  padding-left: 3rem;
+  font-size: 24px;
+}
+.contact-me p {
+  color: #000;
+  padding: 0 5rem;
+}
+.click-me {
+}
+.icon {
+  width: 18px;
+}
+.btn:link,
+.btn:visited {
+  padding: 0 1rem;
+  height: fit-content;
+  border-radius: 9999px;
+  text-decoration: none;
+  border: 2px solid #65bfbf;
+  /* background-image: linear-gradient(to bottom, #11cdd4, #11999e); */
+  background-color: #fff;
+  color: #65bfbf;
+  font-family: "Poppins", sans-serif;
+  transition: 0.1s;
+}
+.btn:hover,
+.btn:active {
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  color: #fff;
+}
+
 .footer-link {
   color: #11999e;
   text-decoration: none;
   margin: 0 1.9rem;
-}
-
-.bottom-container p {
-  margin-top: 2.5rem;
-  color: #eaf6f6;
-  font-size: 0.7rem;
 }
 /* media queries */
 @media screen and (max-width: 1910px) {
