--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,8 @@ h2 {
 }
 
 h2,
-h3 {}
+h3 {
+}
 
 h2 {
   font-family: "Poppins", sans-serif;
@@ -49,12 +50,32 @@ a {
 }
 
 /* top container */
-lottie-player {
-  width: 30rem;
-    height: 30rem;
+
+.logo-m {
+  width: 3rem;
+  height: 3rem;
+  background: #eaf6f6;
+  border: 0.2rem solid #000;
+  border-radius: 50%;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #66bfbf;
+  font-family: "galindo";
+  position: absolute;
+  text-align: center;
+  justify-content: center;
+  /* color: #dc0905; */
+  line-height: 3rem;
+  /* transform: rotate(22deg); */
+  top: 3rem;
+  left: 3rem;
+}
+.desk-gif {
+  width: 35rem;
+  height: 35rem;
   position: absolute;
   z-index: 100;
-  
+  /* padding-bottom: 15rem; */
   left: 0;
   right: 0;
   bottom: 0;
@@ -64,12 +85,13 @@ header {
   background-color: #eaf6f6;
   /* background-image: url(/images/M.gif); */
   background-repeat: no-repeat;
-  
-  
+
   height: 100vh;
   /* width: 100vw; */
 }
-
+.hero-text {
+  padding-top: 15rem;
+}
 .top-container {
   padding: 0.75rem;
   height: 100%;
@@ -109,7 +131,6 @@ header span {
   border-radius: 1rem;
   /* border: 1px solid; */
   display: inline-block;
-  
 }
 
 .row {
@@ -117,14 +138,13 @@ header span {
 }
 
 .project-1 {
-  background: url(/images/bankist.png) ;
+  background: url(/images/bankist.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100%;
   transition: "background" 0.2s;
 }
-
 
 .project-2 {
   background: url(/images/omnifood.png);
@@ -167,10 +187,8 @@ header span {
   min-height: 100%;
 }
 .project:hover {
-  
   transform: scale(1.1);
   transition: "background" 0.2s;
-  
 }
 /* .project-1:hover {
   background: url(/images/bankist-overlay.png);
@@ -245,14 +263,12 @@ header span {
   /* width: 100%; */
   padding: 8rem 0 2.2rem;
   background-color: #65bfbf;
-  
-  
+
   /* display: inline-block; */
-  
 }
 
 .copy {
-  margin-top: 2.5rem;
+  margin-top: 2rem;
   color: #eaf6f6;
   font-size: 0.7rem;
 }
@@ -284,7 +300,7 @@ header span {
   padding: 0 6.7rem;
 }
 
-.click-me span{
+.click-me span {
   /* padding-top: 10px; */
 }
 
@@ -295,7 +311,7 @@ header span {
 
 .btn:link,
 .btn:visited {
-  padding:  0.5rem 1rem;
+  padding: 0.5rem 1rem;
   height: fit-content;
   border-radius: 9999px;
   text-decoration: none;
@@ -304,14 +320,14 @@ header span {
   background-color: #fff;
   color: #65bfbf;
   font-family: "Poppins", sans-serif;
-  transition: 0.3s;
+  transition: 0.2s;
 }
 
 .btn:hover,
 .btn:active {
   background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
   color: #fff;
-  transition: 0.3s;
+  transition: 0.2s;
 }
 
 .footer-link:link,
@@ -320,12 +336,38 @@ header span {
   color: #11999e;
   text-decoration: none;
   margin: 0 1.9rem;
-  transition: 0.1s;
+  transition: 0.2s;
 }
 .footer-link:hover,
 .footer-link:active {
   color: #fff;
-
+}
+/* credits-section */
+.credits {
+  font-size: 0.9rem;
+  font-family: "poppins";
+  margin-top: 1.5rem;
+}
+.credits a:link,
+.credits a:visited {
+  color: #eaf6f6;
+  border: 2px solid #eaf6f6;
+  border-radius: 9999px;
+  padding: 0.3rem 0.6rem;
+  transition: all 0.2s;
+}
+.credits a:hover,
+.credits a:active {
+  background-color: #eaf6f6;
+  color: #65bfbf;
+  transition: all 0.2s;
+}
+.credit-links {
+  padding: 10rem;
+  font-size: 2rem;
+}
+.credit-links a {
+  padding: 5rem;
 }
 /* media queries */
 @media screen and (max-width: 1910px) {
@@ -338,10 +380,8 @@ header span {
   }
   .contact-me {
     margin: -10rem 25% 5rem;
-    width: 50%; 
+    width: 50%;
   }
-  
-  
 }
 
 @media screen and (max-width: 1605px) {
@@ -350,7 +390,7 @@ header span {
   }
   .contact-me {
     margin: -10rem 20% 5rem;
-    width: 60%; 
+    width: 60%;
   }
   .contact-me p {
     padding: 0 6.5rem;
@@ -363,7 +403,7 @@ header span {
   }
   .contact-me {
     margin: -10rem 14% 5rem;
-    width: 72%; 
+    width: 72%;
   }
   .contact-me p {
     padding: 0 5rem;
@@ -377,11 +417,11 @@ header span {
   .projects {
     padding: 1rem 0;
   }
-  
+
   .project {
     padding: 6rem 8rem;
   }
-  
+
   .contact-me p {
     padding: 0 4.7rem;
   }
@@ -391,39 +431,38 @@ header span {
   html {
     font-size: 70%;
   }
-  
+
   header {
     background-size: contain;
   }
-  
+
   .projects {
     padding: 1rem 3rem;
   }
-  
+
   .profile p {
     padding: 1rem 8rem;
   }
   .contact-me {
     margin: -10rem 6% 5rem;
-    width: 88%; 
+    width: 88%;
   }
   .contact-me p {
     padding: 0 2.6rem;
   }
-  
 }
 
 @media screen and (max-width: 520px) {
   html {
     font-size: 60%;
   }
-  
+
   .profile p {
     padding: 1rem 5rem;
   }
   .contact-me {
     margin: -10rem 4% 5rem;
-    width: 92%; 
+    width: 92%;
   }
   .contact-me p {
     padding: 0 2rem;
@@ -437,7 +476,7 @@ header span {
   .project {
     padding: 8rem 12rem;
   }
-  
+
   .profile p {
     padding: 1rem 3rem;
   }
@@ -446,7 +485,7 @@ header span {
   }
   .contact-me {
     margin: -10rem 1% 5rem;
-    width: 98%; 
+    width: 98%;
   }
   .contact-me p {
     padding: 0 2rem;
