--- a/css/styles.css
+++ b/css/styles.css
@@ -71,8 +71,8 @@ a {
   left: 3rem;
 }
 .desk-gif {
-  width: 35rem;
-  height: 35rem;
+  width: 25rem;
+  height: 25rem;
   position: absolute;
   z-index: 100;
   /* padding-bottom: 15rem; */
@@ -90,7 +90,7 @@ header {
   /* width: 100vw; */
 }
 .hero-text {
-  padding-top: 15rem;
+  padding-top: 1rem;
 }
 .top-container {
   padding: 0.75rem;
@@ -370,6 +370,15 @@ header span {
   padding: 5rem;
 }
 /* media queries */
+@media screen and (min-height: 770px) {
+  .desk-gif {
+    width: 35rem;
+    height: 35rem;
+  }
+  .hero-text {
+    padding-top: 10rem;
+  }
+}
 @media screen and (max-width: 1910px) {
   .projects {
     padding: 1rem 20.5rem;
