--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ p {
 h1 {
   margin: 0;
   font-family: "Sacramento", cursive;
-  font-size: 5.625rem;
+  font-size: 4rem;
   line-height: 2;
 }
 
@@ -33,7 +33,7 @@ h3 {
 
 h2 {
   font-family: "Poppins", sans-serif;
-  font-size: 2rem;
+  font-size: 1.75rem;
 }
 
 h3 {
@@ -370,7 +370,7 @@ header span {
   padding: 5rem;
 }
 /* media queries */
-@media screen and (min-height: 600px) {
+/* @media screen and (min-height: 600px) {
   .desk-gif {
     width: 35rem;
     height: 35rem;
@@ -378,7 +378,7 @@ header span {
   .hero-text {
     padding-top: 10rem;
   }
-}
+} */
 @media screen and (max-width: 1910px) {
   .projects {
     padding: 1rem 20.5rem;
