--- a/css/styles.css
+++ b/css/styles.css
@@ -50,25 +50,61 @@ a {
 }
 
 /* top container */
+.icons-padding {
+  margin-top: -9.6rem;
+}
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  /* text-align: left; */
+  padding: 1rem 3rem 0;
+  z-index: 100;
+  border-bottom: 1px solid rgba(102, 191, 191, 0.1);
+  box-shadow: 0px 4px 4px rgba(102, 191, 191, 0.5);
 
-.logo-m {
-  width: 3rem;
-  height: 3rem;
-  background: #eaf6f6;
-  border: 0.2rem solid #000;
-  border-radius: 50%;
-  font-size: 2rem;
-  font-weight: bold;
+  border-radius: 9999px;
+}
+/* .sticky {
+  position: fixed;
+  background-color: #eaf6f6;
+} */
+.nav__links {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding-top: 1rem;
+}
+
+.nav__item {
+  margin-left: 3rem;
+}
+
+.nav__link:link,
+.nav__link:visited {
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: inherit;
+
+  /* background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+
+  text-decoration: none;
+  display: block;
+  transition: all 0.3s;
+}
+.nav__link:hover,
+.nav__link:active {
   color: #66bfbf;
-  font-family: "galindo";
-  position: absolute;
-  text-align: center;
-  justify-content: center;
-  /* color: #dc0905; */
-  line-height: 3rem;
-  /* transform: rotate(22deg); */
-  top: 3rem;
-  left: 3rem;
+}
+.ham-menu {
+  padding-top: 0.7rem;
+}
+.cross-menu {
+  /* padding-top: 1rem; */
+}
+.hidden {
+  display: none;
 }
 .desk-gif {
   width: 25rem;
@@ -119,7 +155,18 @@ header span {
   padding: 1rem 10rem;
   text-align: center;
 }
-
+.developer-text {
+  padding: 0.5rem 0.2rem;
+  color: #66bfbf;
+}
+.developer-text::after {
+  content: "Web Developer.";
+}
+.developer-text:hover::after {
+  content: "Web Designer.";
+  padding-right: 0.575rem;
+  /* letter-spacing: 0.046875rem; */
+}
 /* projects section */
 .projects {
   padding: 1rem;
@@ -350,7 +397,7 @@ header span {
 }
 .credits a:link,
 .credits a:visited {
-  color: #eaf6f6;
+  color: #eaf6f6b5;
   border: 2px solid #eaf6f6;
   border-radius: 9999px;
   padding: 0.3rem 0.6rem;
@@ -370,15 +417,21 @@ header span {
   padding: 5rem;
 }
 /* media queries */
-/* @media screen and (min-height: 600px) {
+@media screen and (max-height: 600px) {
   .desk-gif {
-    width: 35rem;
-    height: 35rem;
+    width: 20rem;
+    height: 20rem;
   }
   .hero-text {
-    padding-top: 10rem;
+    padding-top: 0rem;
   }
-} */
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+}
 @media screen and (max-width: 1910px) {
   .projects {
     padding: 1rem 20.5rem;
@@ -394,6 +447,14 @@ header span {
 }
 
 @media screen and (max-width: 1605px) {
+  .nav__links {
+    padding-top: 0.5rem;
+  }
+
+  .nav__link:link,
+  .nav__link:visited {
+    font-size: 1rem;
+  }
   .projects {
     padding: 1rem 11rem;
   }
@@ -423,6 +484,14 @@ header span {
   html {
     font-size: 80%;
   }
+  .nav__links {
+    padding-top: 1.3rem;
+  }
+
+  .nav__item {
+    margin-left: 4rem;
+  }
+
   .projects {
     padding: 1rem 0;
   }
@@ -444,8 +513,17 @@ header span {
   header {
     background-size: contain;
   }
+  .nav__links {
+    /* display: inline-block; */
+    /* align-items: right; */
+    padding: 5rem 0 0;
+    margin: 0 0 0 -1rem;
+  }
+  .nav__item {
+    margin: 0 0 1rem;
+  }
   .hero-text {
-    padding-top: 15rem;
+    padding-top: 6rem;
   }
   .projects {
     padding: 1rem 3rem;
@@ -467,7 +545,18 @@ header span {
   html {
     font-size: 60%;
   }
-
+  .nav__links {
+    margin: 0 0 0 -3rem;
+  }
+  .ham-menu {
+    padding-top: 0.2rem;
+  }
+  .cross-menu {
+    /* padding-top: 1.3rem; */
+  }
+  .icons-padding {
+    margin-top: -10.4rem;
+  }
   .profile p {
     padding: 1rem 5rem;
   }
