--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ p {
 h1 {
   margin: 0;
   font-family: "Sacramento", cursive;
-  font-size: 4rem;
+  font-size: 6rem;
   line-height: 2;
 }
 
@@ -33,7 +33,7 @@ h3 {
 
 h2 {
   font-family: "Poppins", sans-serif;
-  font-size: 1.75rem;
+  font-size: 2rem;
 }
 
 h3 {
@@ -62,7 +62,7 @@ a {
   border-bottom: 1px solid rgba(102, 191, 191, 0.1);
   box-shadow: 0px 4px 4px rgba(102, 191, 191, 0.5);
 
-  border-radius: 9999px;
+  border-radius: 20px;
 }
 /* .sticky {
   position: fixed;
@@ -73,6 +73,7 @@ a {
   align-items: center;
   list-style: none;
   padding-top: 1rem;
+  font-family: "poppins";
 }
 
 .nav__item {
@@ -126,7 +127,7 @@ header {
   /* width: 100vw; */
 }
 .hero-text {
-  padding-top: 1rem;
+  padding-top: 6rem;
 }
 .top-container {
   padding: 0.75rem;
@@ -339,7 +340,6 @@ header span {
 .contact-me h2 {
   /* padding-left: 3rem; */
   font-size: 1.5rem;
-  text-align: left;
 }
 
 .contact-me p {
@@ -450,10 +450,23 @@ header span {
   .nav__links {
     padding-top: 0.5rem;
   }
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 1.4rem;
+  }
+  .hero-text {
+    padding-top: 3rem;
+  }
 
   .nav__link:link,
   .nav__link:visited {
     font-size: 1rem;
+  }
+  .desk-gif {
+    width: 20rem;
+    height: 20rem;
   }
   .projects {
     padding: 1rem 11rem;
@@ -468,6 +481,10 @@ header span {
 }
 
 @media screen and (max-width: 1300px) {
+  html {
+    font-size: 90%;
+  }
+
   .projects {
     padding: 1rem 1.5rem;
   }
@@ -509,6 +526,9 @@ header span {
   html {
     font-size: 70%;
   }
+  h1 {
+    font-size: 4rem;
+  }
 
   header {
     background-size: contain;
@@ -517,13 +537,13 @@ header span {
     /* display: inline-block; */
     /* align-items: right; */
     padding: 5rem 0 0;
-    margin: 0 0 0 -1rem;
+    margin: 0 0 0 -3rem;
   }
   .nav__item {
     margin: 0 0 1rem;
   }
   .hero-text {
-    padding-top: 6rem;
+    padding-top: 7rem;
   }
   .projects {
     padding: 1rem 3rem;
@@ -539,11 +559,17 @@ header span {
   .contact-me p {
     padding: 0 2.6rem;
   }
+  .copy {
+    font-size: 0.8rem;
+  }
 }
 
 @media screen and (max-width: 520px) {
-  html {
-    font-size: 60%;
+  h1 {
+    font-size: 5rem;
+  }
+  h2 {
+    font-size: 1.5rem;
   }
   .nav__links {
     margin: 0 0 0 -3rem;
@@ -557,21 +583,42 @@ header span {
   .icons-padding {
     margin-top: -10.4rem;
   }
+  .hero-text {
+    padding-top: 4rem;
+  }
+  .desk-gif {
+    width: 25rem;
+    height: 25rem;
+  }
   .profile p {
     padding: 1rem 5rem;
   }
+  .rectangle:first-child {
+    margin-right: 0;
+  }
+  .frame {
+    padding: 1rem 1.5rem;
+  }
   .contact-me {
-    margin: -10rem 4% 5rem;
-    width: 92%;
+    margin: -10rem 2% 5rem;
+    width: 96%;
+    padding: 1rem 0.5rem;
   }
   .contact-me p {
-    padding: 0 2rem;
+    padding: 0 1.5rem;
   }
 }
 
 @media screen and (max-width: 420px) {
   html {
-    font-size: 50%;
+    font-size: 65%;
+  }
+  h1 {
+    font-size: 5rem;
+  }
+  .desk-gif {
+    width: 27rem;
+    height: 27rem;
   }
   .project {
     padding: 8rem 12rem;
@@ -580,8 +627,8 @@ header span {
   .profile p {
     padding: 1rem 3rem;
   }
-  .rectangle:first-child {
-    margin-right: 1rem;
+  .frame {
+    padding: 1rem 1.5rem;
   }
   .contact-me {
     margin: -10rem 1% 5rem;
@@ -589,6 +636,39 @@ header span {
   }
   .contact-me p {
     padding: 0 2rem;
+  }
+}
+@media screen and (max-width: 390px) {
+  .skills {
+    padding: 1rem 0;
+  }
+  .contact-me {
+    margin: -10rem 0.5% 5rem;
+    width: 99%;
+  }
+  .contact-me p {
+    padding: 0 0.8rem;
+  }
+}
+@media screen and (max-width: 360px) {
+  html {
+    font-size: 60%;
+  }
+  .frame {
+    padding: 1rem 1rem;
+  }
+  h2 {
+  }
+  .contact-me {
+    margin: -10rem 0% 5rem;
+    width: 100%;
+  }
+  .contact-me p {
+    padding: 0 0.8rem;
+  }
+  .btn:link,
+  .btn:visited {
+    padding: 0.3rem 0.4rem;
   }
 }
 
