--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,13 @@ body {
   text-align: center;
   color: #40514e;
   margin: 0;
-  font-family: "Merriweather", serif;
+  font-family: "Donegal One", serif;
 }
 
 p {
   line-height: 2;
   margin: 0;
+  font-size: 1.2rem;
 }
 
 h1 {
@@ -29,10 +30,10 @@ h2 {
 
 h2,
 h3 {
+  font-family: "Poppins", sans-serif;
 }
 
 h2 {
-  font-family: "Poppins", sans-serif;
   font-size: 2rem;
 }
 
@@ -153,7 +154,7 @@ header span {
 }
 
 .profile p {
-  padding: 1rem 10rem;
+  padding: 0 10rem 1rem;
   text-align: center;
 }
 .developer-text {
@@ -271,6 +272,7 @@ header span {
   display: flex;
   align-items: center;
   justify-content: center;
+  align-self: center;
   padding-bottom: 1.5rem;
   margin-bottom: 5rem;
 }
@@ -318,7 +320,7 @@ header span {
 .copy {
   margin-top: 2rem;
   color: #eaf6f6;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
 }
 
 /* contact section */
@@ -345,6 +347,7 @@ header span {
 .contact-me p {
   color: #000;
   padding: 0 6.7rem;
+  font-size: 1.1rem;
 }
 
 .click-me span {
@@ -451,10 +454,10 @@ header span {
     padding-top: 0.5rem;
   }
   h1 {
-    font-size: 3rem;
+    font-size: 4rem;
   }
   h2 {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
   }
   .hero-text {
     padding-top: 3rem;
@@ -550,7 +553,7 @@ header span {
   }
 
   .profile p {
-    padding: 1rem 8rem;
+    padding: 0 6rem 1rem;
   }
   .contact-me {
     margin: -10rem 6% 5rem;
@@ -560,7 +563,8 @@ header span {
     padding: 0 2.6rem;
   }
   .copy {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
+    font-weight: bold;
   }
 }
 
@@ -569,7 +573,7 @@ header span {
     font-size: 5rem;
   }
   h2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
   .nav__links {
     margin: 0 0 0 -3rem;
@@ -591,8 +595,9 @@ header span {
     height: 25rem;
   }
   .profile p {
-    padding: 1rem 5rem;
+    padding: 0 3rem 1rem;
   }
+
   .rectangle:first-child {
     margin-right: 0;
   }
@@ -607,6 +612,10 @@ header span {
   .contact-me p {
     padding: 0 1.5rem;
   }
+  .btn:link,
+  .btn:visited {
+    padding: 0.3rem 0.6rem;
+  }
 }
 
 @media screen and (max-width: 420px) {
@@ -615,6 +624,9 @@ header span {
   }
   h1 {
     font-size: 5rem;
+  }
+  h3 {
+    /* font-size: 1.2rem; */
   }
   .desk-gif {
     width: 27rem;
@@ -625,17 +637,30 @@ header span {
   }
 
   .profile p {
-    padding: 1rem 3rem;
+    padding: 0 1rem 1rem;
   }
   .frame {
-    padding: 1rem 1.5rem;
+    padding: 1rem 2.5rem;
+  }
+  .rectangle {
+    height: auto;
+  }
+
+  .rectangle:first-child {
+    margin-bottom: 2rem;
+  }
+  .skill-row {
+    display: block;
+  }
+  .skills .row {
+    padding: 0 22%;
   }
   .contact-me {
     margin: -10rem 1% 5rem;
     width: 98%;
   }
   .contact-me p {
-    padding: 0 2rem;
+    padding: 0 1.8rem;
   }
 }
 @media screen and (max-width: 390px) {
@@ -644,6 +669,7 @@ header span {
   }
   .contact-me {
     margin: -10rem 0.5% 5rem;
+    padding: 1rem 0.3rem;
     width: 99%;
   }
   .contact-me p {
@@ -652,13 +678,12 @@ header span {
 }
 @media screen and (max-width: 360px) {
   html {
-    font-size: 60%;
+    font-size: 58.5%;
   }
   .frame {
-    padding: 1rem 1rem;
+    padding: 1rem 2rem;
   }
-  h2 {
-  }
+
   .contact-me {
     margin: -10rem 0% 5rem;
     width: 100%;
